@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2012-10-18 Anyes
+	* Add feature to check for duplicate events in data
+	
 2012-10-14 Steve
 	* Tagging SusyNtuple-00-00-32
 
